# maswavespy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_publish_to_pypi.yaml
examples/: MASWavesPy_Combination_test.py  MASWavesPy_Dispersion_test1.py  MASWavesPy_Dispersion_test2.py  MASWavesPy_Inversion_test.py
examples/Data/: Oysand_c_list.txt  Oysand_dc.txt  Oysand_example_dataset.csv  Oysand_f_list.txt  Oysand_initial.csv
src/maswavespy/: __init__.py  combination.py  cy_dispersion_imaging.cpp  cy_dispersion_imaging.pyx  cy_theoretical_dc.cpp  cy_theoretical_dc.pyx  dataset.py  dispersion.py  inversion.py  select_dc.py  supplemental.py  wavefield.py
tests/: test_maswavespy.py
